; ModuleID = '/home/carl/AnghaBench/darwin-xnu/security/extr_mac_socket.c_mac_socket_check_receive.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/security/extr_mac_socket.c_mac_socket_check_receive.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket = type { i32 }

@socket_check_receive = common dso_local global i32 0, align 4
@mac_socket_enforce = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mac_socket_check_receive(i32 %0, %struct.socket* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.socket*, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store %struct.socket* %1, %struct.socket** %4, align 8
  %6 = load i32, i32* @socket_check_receive, align 4
  %7 = load i32, i32* %3, align 4
  %8 = load %struct.socket*, %struct.socket** %4, align 8
  %9 = ptrtoint %struct.socket* %8 to i32
  %10 = load %struct.socket*, %struct.socket** %4, align 8
  %11 = getelementptr inbounds %struct.socket, %struct.socket* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @MAC_CHECK(i32 %6, i32 %7, i32 %9, i32 %12)
  %14 = load i32, i32* %5, align 4
  ret i32 %14
}

declare dso_local i32 @MAC_CHECK(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
